# mirai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: pffn.py  pffn_dynamic.py
mirai/: __init__.py  __main__.py  build.py  decorator.py  discovery.py  log.py  pipeline.py
mirai/codegen/: __init__.py  api_render.py  builder.py  render.py  transformer.py
mirai/templates/: api.py.tpl  build.sh.tpl  kernel.cc.tpl
tests/: conftest.py  test_decorator.py  test_e2e.py  test_render.py  test_transformer.py
tests/fixtures/: PffnFwd_shapes.json  fwd_output_code.py
