[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirai-compiler"
version = "0.2.0"
description = "Compile PyTorch models into TensorFlow custom ops backed by Triton PTX kernels"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["mirai*"]
exclude = ["examples*", "generated*", "torch_compile_debug*"]

[tool.setuptools.package-data]
"mirai.templates" = ["*.tpl"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /generated
  | /torch_compile_debug
)
'''
